# horadric-deckard

./: .coverage  .coveragerc  .gitignore  README.md  README_KR.md  bootstrap.bat  bootstrap.sh  doctor.py  install.py  pyproject.toml  pytest.ini  test_results_v8.txt  test_results_v9.txt
app/: __init__.py  config.py  db.py  engine_registry.py  engine_runtime.py  http_server.py  indexer.py  main.py  models.py  queue_pipeline.py  registry.py  search_engine.py  watcher.py  workspace.py
config/: config.json
deckard/: __init__.py  main.py
horadric_deckard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mcp/: __init__.py  __main__.py  cli.py  daemon.py  proxy.py  registry.py  server.py  session.py  telemetry.py  test_cli.py  test_daemon.py  test_server.py  workspace.py
sari/: __init__.py  __main__.py  main.py
sari.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: query.py  run_tests_isolated.sh  verify_pack1_savings.py
tests/: benchmark_performance.py  conftest.py  measure_accuracy.py  pack1_util.py  round1_log_dir_overrides.py  round2_auto_mode.py  round3_stdio_framing.py  round4_daemon_logging.py  round5_workspace_resolution.py  round6_cli_http_resolution.py  round7_workspace_priority.py  round8_registry_behaviors.py  telemetry_helpers.py  test_advanced_edge_cases.py  test_ast_engine.py  test_ast_intelligence.py  test_audit_edge_cases.py  test_broken_scenarios.py  test_business_logic_smoke.py  test_chaos.py  test_cli_deep.py  test_cold_start.py  test_concurrency_stress.py  test_config.py  test_config_matrix.py  (+67 more)
(+134 files in other folders)
